...
                        append(linkStr)
                    }
                },
                textAlign = TextAlign.Center,
                style = MaterialTheme.typography.bodyMedium,
                modifier = Modifier
                    .testTag("invite_url")
                    .clickable(enabled = fieldsEnabled) { onInviteViaShare() }
                    .defaultItemPadding()
                    .align(Alignment.CenterHorizontally)
            )

        }
...
                )

                //Separated out for easier automated testing.
                Text(
                    text = it.code,
                    textAlign = TextAlign.Center,
                    modifier = Modifier.testTag("invite_code"),
                )
            }
        }

        HorizontalDivider()

...
