appId: world.respect.app
onFlowStart:
  - clearState: world.respect.app
  - runScript:
      file: "scripts/school_init.js"
      env:
        TESTCONTROLLER_URL: ${TESTCONTROLLER_URL}
        SCHOOL_ADMIN_PASSWORD: ${SCHOOL_ADMIN_PASSWORD}
        DIR_ADMIN_AUTH_HEADER: ${DIR_ADMIN_AUTH_HEADER}
        SCHOOL_URL: ${SCHOOL_URL}
        SCHOOL_NAME: ${SCHOOL_NAME}
        URL_SUBSTITUTION: ${URL_SUBSTITUTION}
        NAME: "001_002c_invite_existing_students_and_parent_to_join as_family_member_approval_enabled_test"

onFlowComplete:
  - runScript:
      file: "scripts/teardown.js"

---
#Admin add a users to the app and add a class named - TestClass
- runFlow: "subflows/school_admin_login_flow.yaml"

- assertVisible:
    id: "app_title"
    text: "Apps"
- runFlow:
    file: "subflows/user_add_class.yaml"
    env:
      CLASSNAME: "TestClass"

- runFlow:
    file: "subflows/add_person_to_app.yaml"
    env:
      FIRSTNAME: "ParentA"
      LASTNAME: "User"
      GENDER: "Female"
      ROLE: "Parent"
      USERNAME: "parentauser"
      PASSWORD: "test123"

- runFlow:
    file: "subflows/add_person_to_app.yaml"
    env:
      FIRSTNAME: "StudentA"
      LASTNAME: "User"
      GENDER: "Female"
      ROLE: "Student"
      USERNAME: "studentauser"
      PASSWORD: "test123"

- runFlow:
    file: "subflows/add_person_to_app.yaml"
    env:
      FIRSTNAME: "StudentB"
      LASTNAME: "User"
      GENDER: "Male"
      ROLE: "Student"
      USERNAME: "studentbuser"
      PASSWORD: "test123"

- tapOn: "Classes"
- tapOn: "TestClass"
- assertVisible:
    id: "app_title"
    text: "TestClass"
- tapOn: "People"

# Teacher send Family member invite to StudentA user to join ParentA User
- tapOn: "ParentA User"
- tapOn:
    id: "floating_action_button"
- assertVisible:
    id: "app_title"
    text: "Edit person"
- tapOn: "Family member"
- tapOn: "Invite person"
- assertVisible: "ParentA User / Family member"
# Approval ON
- runFlow:
    when:
      notVisible: "Approval not required until:.*"
    commands:
      - tapOn: "Approval required" # turn the switch ON
      - assertVisible: "Approval not required until:.*"
- assertVisible: "Approval not required until:.*"
- copyTextFrom:
    id: "invite_code"
- evalScript: ${output.studentApproveOn = maestro.copiedText}
- back
- back
- back

# Admin send Family member invite to ParentA user to join StudentB User
- tapOn: "People"
- tapOn: "StudentB User"
- tapOn:
    id: "floating_action_button"
- assertVisible:
    id: "app_title"
    text: "Edit person"
- tapOn: "Family member"
- tapOn: "Invite person"
- assertVisible: "StudentB User / Family member"
# Approval ON
- runFlow:
    when:
      visible: "Approval not required until:.*"
    commands:
      - tapOn: "Approval required" # turn the switch ON
      - assertNotVisible: "Approval not required until:.*"
- assertNotVisible: "Approval not required until:.*"
- copyTextFrom:
    id: "invite_code"
- evalScript: ${output.parentApproveOn = maestro.copiedText}


#StudentA user using link to join the family member (ParentA user)
- runFlow:
    file: "subflows/openlink_flow.yaml"
    env:
      URL: ${output.SCHOOL_URL + "respect_school_link/AcceptInvite?inviteCode=" + output.studentApproveOn}
- assertVisible:
    id: "app_title"
    text: "Login"
- tapOn: "Username"
- inputText: "studentauser"
- tapOn: "Password"
- inputText: "test123"
- tapOn: "Login"
- assertVisible:
    id: "app_title"
    text: "Invitation"
- assertVisible: "Role"
- assertVisible: "Student"
- assertVisible: "Family member"
- assertVisible: "ParentA User"
- assertVisible: "School name"
- assertVisible: ${output.SCHOOL_NAME}
- assertVisible: "School server URL"
- assertVisible: ${output.SCHOOL_URL}
- tapOn: "Accept Invite"
- assertVisible:
    id: "app_title"
    text: "Accounts"
- assertVisible: "StudentA User"
- assertVisible: "Pending requests"
- assertVisible: "StudentA User: Family member (Student)"
- assertVisible: ".*Pending approval"

#ParentA user using link to join the family member (StudentB user)
- runFlow:
    file: "subflows/openlink_flow.yaml"
    env:
      URL: ${output.SCHOOL_URL + "respect_school_link/AcceptInvite?inviteCode=" + output.parentApproveOn}
- assertVisible:
    id: "app_title"
    text: "Login"
- tapOn: "Username"
- inputText: "parentauser"
- tapOn: "Password"
- inputText: "test123"
- tapOn: "Login"
- assertVisible:
    id: "app_title"
    text: "Invitation"
- assertVisible: "Role"
- assertVisible: "Parent"
- assertVisible: "Family member"
- assertVisible: "StudentB User"
- assertVisible: "School name"
- assertVisible: ${output.SCHOOL_NAME}
- assertVisible: "School server URL"
- assertVisible: ${output.SCHOOL_URL}
- tapOn: "Accept Invite"
- assertVisible:
    id: "app_title"
    text: "Accounts"
- assertVisible: "ParentA User"
- assertVisible: "Pending requests"
- assertVisible: "ParentA User: Family member (parent)"
- assertVisible: ".*Pending approval"

#admin approve user's requests to join the family member
- clearState: world.respect.app
- runFlow: "subflows/school_admin_login_flow.yaml"
- tapOn: "People"
- tapOn: "StudentB User"
- assertVisible: "Pending requests.*"
- tapOn: "Accept Invite"
- assertVisible: "Family members"
- assertVisible: "ParentA User"
- tapOn: "ParentA User"
- assertVisible: "Pending requests.*"
- assertVisible: "StudentA User.*"
- tapOn: "Accept Invite"
- assertNotVisible: "Pending requests.*"
- assertVisible: "Family members"
- assertVisible: "ParentA User"
- tapOn: "ParentA User"
- assertVisible: "Family members"
- assertVisible: "StudentA User"
- assertVisible: "StudentB User"